[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project]
authors = [{ name = "Frederik Aalund", email = "fpa@sbtinstruments.com" }]
requires-python = "<4,>=3.12"
name = "lago"
version = "0.1.0"
description = "Brings structure to our data lake"
dependencies = [
    "cyto[model] @ git+https://github.com/sbtinstruments/cyto@09fc2f8488316b80b7314af0ec2f1b7884abe283",
    "filelock<4.0.0,>=3.15.4",
]

[project.scripts]
lago = "lago.cli:__main__"

[project.optional-dependencies]
cli = ["typer<1.0.0,>=0.12.3", "rich<14.0.0,>=13.7.1", "polars<2.0.0,>=1.5.0"]

[dependency-groups]
dev = ["mypy>=1.10.1,<2", "ruff>=0.14.13"]
